--- a/_sass/lib/_variables.scss
+++ b/_sass/lib/_variables.scss
@@ -1,5 +1,5 @@
 $primary-color: red;
-$light-grey: #ccc;
+$light-grey: #bbb;
 $main-font: 'TSTAR-Regular',sans-serif;
 $bold-font: 'TSTAR-Bold',sans-serif;
 
