--- a/_sass/partials/layout.scss
+++ b/_sass/partials/layout.scss
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-size: 93.75%;
+}
+
 html,
 body {
     position: absolute;
@@ -20,7 +24,6 @@ body {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    font-size: 15px;
 }
 
 body {
