--- a/_sass/partials/popup.scss
+++ b/_sass/partials/popup.scss
@@ -26,8 +26,8 @@
 
     .close-overlay {
         position: absolute;
-        top: 10px;
-        right: 15px;
+        top: 0;
+        right: 0;
         width: 100%;
         height: 100%;
         cursor: alias;
@@ -38,7 +38,8 @@
     margin: 0 auto;
     padding: 20px;
     background: #fff;
-    max-width: 800px;
+    width: 400px;
+    max-width: 100%;
     max-height: 100%;
     overflow: scroll;
     position: relative;
