_sand is done ...

--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -41,7 +41,7 @@
             </div>
            <div>
                 Archival pigment print with extra<br>
-                certificate and with Signature on verso<br><br>
+                certificate and with signature on verso<br><br>
                 <a href="#order-de" class="btn">Bestellen</a>
                 <a href="#order-en" class="btn">Order</a>
            </div>
