Ein paar Daten ergänzt

--- a/_layouts/book-detail.html
+++ b/_layouts/book-detail.html
@@ -70,7 +70,7 @@
               {{page.de.price}} € inkl. Versand in Deutschland<p/><p>
               {{page.de.text}}<br>
 
-              <a href="#order" class="btn">Buch bestellen</a>
+              <a href="#order" class="btn">Bestellen</a>
             
           </div>
           <div class="flex-column">
@@ -82,10 +82,10 @@
               {{page.en.publisher}}<p/><p>
               {{page.en.edition}}<br>
               ISBN {{page.en.isbn}}<p/><p>
-              {{page.en.price}} € inkl. Versand in Deutschland<p/><p>
+              {{page.en.price}} € incl. mailing within Germany<p/><p>
               {{page.en.text}}<br>
             
-              <a href="#order" class="btn">Order Book</a>
+              <a href="#order" class="btn">Order</a>
 
           </div>
       </div>
