--- a/_sass/partials/layout.scss
+++ b/_sass/partials/layout.scss
@@ -71,7 +71,7 @@ body {
     display: block;
     margin-left: 19vw;
     max-width: 1200px;
-    padding: 6vh 6vw;
+    padding: 4rem;
     box-sizing: border-box;
 
     @include media-query-portrait-only() {
@@ -84,6 +84,7 @@ body {
 
     @include media-query-l($on-laptop) {
         margin-left: 30vw;
+        padding: 2rem;
     }
 
     @include media-query-p($on-mobile) {
@@ -131,20 +132,24 @@ body {
     align-items: center;
     display: flex;
 
-
-    div {
+    .home-link {
+        width: 100%;
         max-height: 100%;
-        display: flex;
-        flex-direction: column;
+        text-decoration: none;
+        color: black;
 
         img {  
             margin: auto;
-            max-height: 100%;
+            max-height: 80%;
             max-width: 100%;
         }
+
+        &:hover {
+            opacity: 0.9;
+            text-decoration: none;
+            color: black;
+        }
     }
-
-
 }
 
 .project-wrapper {
