Add Netlify Forms

--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -56,7 +56,7 @@
             <a class="close-overlay" href="#"></a>
             <div class="popup">
                 <a class="close" href="#info">×</a>
-                    {% include order-form.html language="de"%}
+                    {% include order-form.html language="de" type="image"%}
 
                 
                 <div class="popup-copyright">
@@ -71,7 +71,7 @@
             <a class="close-overlay" href="#"></a>
             <div class="popup">
                     <a class="close" href="#info">×</a>
-                    {% include order-form.html language="en"%}
+                    {% include order-form.html language="en" type="image"%}
 
                 
                 <div class="popup-copyright">
