--- a/_layouts/book-detail.html
+++ b/_layouts/book-detail.html
@@ -70,7 +70,7 @@
               {{page.de.price}} € inkl. Versand in Deutschland<p/><p>
               {{page.de.text}}<br>
 
-              <a href="#order" class="btn">Bestellen</a>
+              <a href="#order-de" class="btn">Bestellen</a>
             
           </div>
           <div class="flex-column">
@@ -85,7 +85,7 @@
               {{page.en.price}} € incl. mailing within Germany<p/><p>
               {{page.en.text}}<br>
             
-              <a href="#order" class="btn">Order</a>
+              <a href="#order-en" class="btn">Order</a>
 
           </div>
       </div>
@@ -93,30 +93,29 @@
 
   </div>
 
-  <div id="order" class="overlay">
+  <div id="order-de" class="overlay">
+    <a class="close-overlay" href="#"></a>
+    <div class="popup">
+      {% include order-form.html type="book" language="de" %}
+      <div class="popup-copyright">
+        Photograph and Copyright © by HEINER LEISKA<br>
+        Not to be reproduced in any form without written permission of the photographer
+      </div>
+  
+    </div>
+  </div>
+
+  <div id="order-en" class="overlay">
       <a class="close-overlay" href="#"></a>
       <div class="popup">
-          <form action="{{ page.url }}#thankyou" name="{{ page.slug }}" method="POST" netlify>
-          <input type="hidden" name="_subject" value="Neue Bestellung für das Buch {{ page.title }}" />
-          <label for="name">Ihr Name</label>
-          <input type="text" id="name" name="name" placeholder="Name">
-          <label for="email">Ihre Email Adresse</label>
-          <input type="text" id="email" name="_replyto" placeholder="mail@example.com">
-          <label for="order">Ihre Bestellung</label>
-          <textarea id="order" name="order">
-            Ich möchte gerne 1 Exemplar des Buches "{{ page.title }}" bestellen
-          </textarea>
-          <input type="submit" value="Bestellung absenden" class="btn">
-          <a href="#" class="btn cancel-btn">Abbrechen</a>
-        </form>
+        {% include order-form.html type="book" language="en" %}
         <div class="popup-copyright">
-            Photograph and Copyright © by HEINER LEISKA<br>
-            Not to be reproduced in any form without written permission of the photographer
+          Photograph and Copyright © by HEINER LEISKA<br>
+          Not to be reproduced in any form without written permission of the photographer
         </div>
-
+    
       </div>
     </div>
-
     
     {% include thankyou.html %}
 
