--- a/_includes/order-form.html
+++ b/_includes/order-form.html
@@ -1,11 +1,11 @@
-<form action="{{ page.url }}#thankyou" name="{{ page.slug }}" method="POST" netlify>
+<form action="{{ page.url }}#thankyou" name="{{ page.slug }}" method="POST" onsubmit="return confirm('{{site.data.order[include.type][include.language].confirm}}')" netlify>
     <input type="hidden" name="_subject" value="Neue Bestellung für das Buch {{ page.title }}" />
     <label for="name">{{site.data.order[include.type][include.language].name}}</label>
-    <input type="text" id="name" name="name" placeholder="Name">
+    <input type="text" id="name" name="name" placeholder="Name" required>
     <label for="email">{{site.data.order[include.type][include.language].email}}</label>
-    <input type="text" id="email" name="email" placeholder="mail@example.com">
+    <input type="text" id="email" name="email" placeholder="mail@example.com" required>
     <label for="email">{{site.data.order[include.type][include.language].address}}</label>
-    <input type="text" id="address" name="address" placeholder="Musterstraße 1, 12345 Musterstadt">
+    <input type="text" id="address" name="address" placeholder="Musterstraße 1, 12345 Musterstadt" required>
     
 
     {% if include.type == "image" %}
