--- a/_includes/order-form.html
+++ b/_includes/order-form.html
@@ -1,5 +1,5 @@
 <form action="{{ page.url }}#thankyou" name="{{ page.slug }}" method="POST" onsubmit="return confirm('{{site.data.order[include.type][include.language].confirm}}')" netlify>
-    <input type="hidden" name="_subject" value="Neue Bestellung für das Buch {{ page.title }}" />
+    <input type="hidden" name="subject" value="Neue Bestellung für das Buch {{ page.title }}" />
     <label for="name">{{site.data.order[include.type][include.language].name}}</label>
     <input type="text" id="name" name="name" placeholder="Name" required>
     <label for="email">{{site.data.order[include.type][include.language].email}}</label>
