--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -1,5 +1,6 @@
 @import 
     "partials/about",
+    "partials/basics",
     "partials/buttons",
     "partials/animations",
     "partials/layout",
