--- a/_sass/partials/navigation.scss
+++ b/_sass/partials/navigation.scss
@@ -32,6 +32,7 @@ nav {
         color: #000;
         display: block;
         padding-bottom: 1rem;
+        text-decoration: none;
 
         &.active {
             font-family: $bold-font;
