--- a/_sass/partials/popup.scss
+++ b/_sass/partials/popup.scss
@@ -38,7 +38,7 @@
     margin: 0 auto;
     padding: 20px;
     background: #fff;
-    width: 400px;
+    width: 500px;
     max-width: 100%;
     max-height: 100%;
     overflow: scroll;
@@ -67,9 +67,9 @@
 
 
     .close {
-        position: absolute;
-        top: 10px;
-        right: 15px;
+        position: sticky;
+        top: 0;
+        right: 0;
         transition: all 200ms;
         font-size: 1.5em;
         text-decoration: none;
@@ -81,6 +81,7 @@
     }
 
     .popup-content {
+        padding-right: 1rem;
         max-height: 30%;
         overflow: auto;
         font-weight: 200;
