--- a/_sass/partials/popup.scss
+++ b/_sass/partials/popup.scss
@@ -68,6 +68,7 @@
 
     .close {
         position: sticky;
+        position: -webkit-sticky;
         top: 0;
         right: 0;
         transition: all 200ms;
