Was hälst du von der Buch Detail seite so?

--- a/_layouts/book-detail.html
+++ b/_layouts/book-detail.html
@@ -71,21 +71,13 @@
               {{page.de.text}}<br>
 
               <a href="#order-de" class="btn">Bestellen</a>
-            
+              <a href="#order-en" class="btn">Order</a>
           </div>
           <div class="flex-column">
-              {{page.en.title}}<br>
-              {{page.en.cover}}<br>
-              {{page.en.pages}}<br>
-              {{page.en.languages}}<p/><p>
-              {{page.en.dimensions}}<br>
-              {{page.en.publisher}}<p/><p>
-              {{page.en.edition}}<br>
-              ISBN {{page.en.isbn}}<p/><p>
-              {{page.en.price}} € incl. mailing within Germany<p/><p>
-              {{page.en.text}}<br>
+            <p>{{page.title}}</p>
+              {{ content }}
             
-              <a href="#order-en" class="btn">Order</a>
+              
 
           </div>
       </div>
