--- a/_includes/thankyou.html
+++ b/_includes/thankyou.html
@@ -2,10 +2,10 @@
     <a class="close-overlay" href="#"></a>
     <div class="popup">
         <p>
-            Danke für Ihre Bestellung, sie erhalten in Kürze eine Email mit der Rechnung.
+            Danke für Ihre Bestellung, Sie erhalten in Kürze eine E-Mail mit der Rechnung.
         </p>
         <p>
-            Thank you for your order. You will receive an email with the Invoice shortly.
+            Thank you for your order. You will receive an e-mail with the invoice shortly.
         </p>
         <a href="#" class="btn">Zurück zur Website</a>
 
