--- a/_sass/partials/slider.scss
+++ b/_sass/partials/slider.scss
@@ -26,6 +26,10 @@
             max-height: 100%;
             max-width: 100%;
         }
+
+        .svg-icon {
+            cursor: pointer;
+        }
     }
 
     .slide-input {
