--- a/_sass/partials/popup.scss
+++ b/_sass/partials/popup.scss
@@ -41,7 +41,7 @@
     width: 500px;
     max-width: 100%;
     max-height: 100%;
-    overflow: scroll;
+    overflow: auto;
     position: relative;
     transition: opacity 2s ease-in-out;
     font-family: $main-font;
