--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@
   {% include header.html %}
 
     <div class="container-home">
-      <a href="/photography/" class="home-link">
+      <a href="/books/" class="home-link">
         <p>{{ page.text.top }}</p>
         <img class="" onload="fadeIn(this)" src="{{ page.image }}" style="visibility: hidden">
         <p>{{ page.text.bottom }}</p>
