Add netlify cms

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,3 +2,14 @@
 </div>
 
 <script language="javascript" type="text/javascript" src="/assets/js/app.js"></script>
+<script>
+    if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+            if (!user) {
+                window.netlifyIdentity.on("login", () => {
+                    document.location.href = "/admin/";
+                });
+            }
+        });
+    }
+</script>
