--- a/_sass/partials/layout.scss
+++ b/_sass/partials/layout.scss
@@ -39,7 +39,8 @@ body {
     position: fixed;
     width: 24vw;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
     min-height: 100%;
     padding-left: 3vw;
     padding-top: 3vw;
