--- a/_sass/partials/popup.scss
+++ b/_sass/partials/popup.scss
@@ -31,6 +31,7 @@
         width: 100%;
         height: 100%;
         cursor: alias;
+        z-index: 20;
     }
 }
 
@@ -67,14 +68,14 @@
 
 
     .close {
-        position: sticky;
-        position: -webkit-sticky;
-        top: 0;
-        right: 0;
+        position: absolute;
+        top: 10px;
+        right: 10px;
         transition: all 200ms;
         font-size: 1.5em;
         text-decoration: none;
         color: #333;
+        line-height: 0.5;
 
         &:hover {
             color: #999;
