--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -43,7 +43,7 @@
   {% include footer.html %}
 
   <div class="preload"              
-  style="background:url({{ page.next.image }}) no-repeat -9999px -9999px"></div>
+  style="background:url(/img/{{ page.next.image }}) no-repeat -9999px -9999px"></div>
 </body>
 
 </html>
