--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <a href="/" class="logo"><img src="/img/logo/heinerleiska-logo.svg" class="logo"></a>
         <nav class="main">
             <a href="/photography/" 
-            {% if page.url contains "photography" %}
+            {% if page.url contains "photography" or page.url == "/" %}
             	class="active"
             {% endif %}
             >Photographs</a>
