--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,14 +6,10 @@
 </head>
 
 <body>
-<div class="flex flex-col sm:flex-row">
-    <div class="w-48 flex-shrink-0 p-4">
-        {% include header.html %}
-    </div>
-    <div class="p-4">
+    {% include header.html %}
+    <div class="content">
         {{ content }}
     </div>
-</div>
 {% include footer.html %}
 </body>
 </html>
