--- a/_sass/partials/layout.scss
+++ b/_sass/partials/layout.scss
@@ -1,10 +1,5 @@
 @import "../lib/all";
 
-$_sidebar-height-portrait: 14rem;
-$_sidebar-height-mobile: 11rem;
-$_sideinfo-height-portrait: 9rem;
-$_sideinfo-height-mobile: 6rem;
-
 * {
     text-decoration: none;
     -webkit-box-sizing: border-box;
@@ -13,7 +8,7 @@ $_sideinfo-height-mobile: 6rem;
 }
 
 body {
-    font-size: 93.75%;
+    font-size: 14px;
 }
 
 html,
@@ -32,145 +27,30 @@ body {
 }
 
 body {
+    @media all and (min-width: 500px) {
     background: white;
+    display: flex;
+    overflow: hidden;
+
+    }
+}
+
+.sidebar, .content {
+    padding: 16px;
+    width: 100%;
+    overflow: auto;
 }
 
 .sidebar {
-    position: fixed;
-    width: 24vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 100%;
-    padding-left: 3vw;
-    padding-top: 3vw;
-    background: #fff;
-    top: 0;
-    bottom: 0;
-
-    @include media-query-portrait-only() {
-        align-items: flex-start;
-        height: $_sidebar-height-portrait;
-        width: 100%;
-        padding-left: 8vw;
-        padding-top: 1.5rem;
-        z-index: 12;
-        min-height: auto;
-    }
-
-    @include media-query-p($on-mobile) {
-        height: $_sidebar-height-mobile;
-    }
+    width: 200px;
+    flex-shrink: 0;
 }
 
-.content {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: block;
-    margin-left: 19vw;
-    max-width: 1200px;
-    padding: 4rem;
-    box-sizing: border-box;
-
-    @include media-query-portrait-only() {
-        padding: 0 8vw 0;
-        margin-left: 0;
-        margin-top: $_sidebar-height-portrait;
-        margin-bottom: $_sideinfo-height-portrait;
-        width: auto;
-    }
-
-    @include media-query-l($on-laptop) {
-        margin-left: 30vw;
-        padding: 2rem;
-    }
-
-    @include media-query-p($on-mobile) {
-        margin-top: $_sidebar-height-mobile;
-        margin-bottom: $_sideinfo-height-mobile;
-    }
-}
-
-.vertical-center {
-    min-height: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.container-list {
-    display: flex;
-    flex-wrap: wrap;
+.content img {
     max-width: 100%;
-    justify-content: center;
-    width: 1000px;
+    max-height: 80vh;
 }
 
-.container-detail {
-    max-width: 100%;
-    height: 100%;
-    position: relative;
-    display: flex;
-    align-items: center;
-    max-height: 1200px;
-    justify-content: center;
-
-    img {
-        position: absolute;
-        display: block;
-        margin: auto;    
-        max-height: 100%;
-        max-width: 100%;
-        zoom: 1;
-    }
-}
-
-.container-home {
-    max-width: 100%;
-    height: 100%;
-    position: relative;
-    align-items: center;
-    display: flex;
-
-    .home-link {
-        width: 100%;
-        max-height: 100%;
-        text-decoration: none;
-        color: black;
-
-        img {  
-            margin: auto;
-            max-height: 80%;
-            max-width: 100%;
-        }
-
-        &:hover {
-            opacity: 0.9;
-            text-decoration: none;
-            color: black;
-        }
-    }
-}
-
-.project-wrapper {
-    width: 240px;
-    max-height: 180px;
-    margin: 0 1rem 1rem 0;
-    
-    img {
-        max-width: 100%;
-        max-height: 100%;
-        vertical-align: middle;
-    }
-
-    &:hover {
-        opacity: 0.8;
-    }
-
-    @include media-query-p($on-mobile) {
-        margin-right: 0;
-    }
-
+.logo img {
+    width: 150px;
 }
