--- a/_sass/partials/layout.scss
+++ b/_sass/partials/layout.scss
@@ -27,7 +27,7 @@ body {
 }
 
 body {
-    @media all and (min-width: 500px) {
+    @media all and (min-width: 700px) {
     background: white;
     display: flex;
     overflow: hidden;
@@ -41,15 +41,28 @@ body {
     overflow: auto;
 }
 
+.content {
+    p {
+        max-width: 1200px;
+    }
+
+    img {
+        max-width: 100%;
+        max-height: 80vh;
+    }
+}
+
+.about {
+    img {
+        width: 300px;
+    }
+}
+
 .sidebar {
     width: 200px;
     flex-shrink: 0;
 }
 
-.content img {
-    max-width: 100%;
-    max-height: 80vh;
-}
 
 .logo img {
     width: 150px;
