--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,19 +3,22 @@
         <img src="/img/logo/heinerleiska-logo.svg" class="" alt="Heiner Leiska Logo">
     </a>
     <nav class="main">
-        <a href="">Series <div style="display: inline-block; transform: rotate(90deg)">&#62;</div></a>
-        <div style="padding-bottom: .5rem">
-            {% for project in site.projects %}
-            {% assign url = '/projects/' | append: project.slug | append: '/' %}
-            <a href="{{ url }}"
-               style="margin-left: 20px; padding-bottom: .5rem; {% if page.url == url %}font-weight: bold;{% endif %}">
-                {{ project.title }}
-            </a>
-            {% endfor %}
-        </div>
-        {% for page in site.html_pages %}
-            {% if page.name != '404.html'%}
-                <a href="{{ page.url }}">{{ page.title }}</a>
+<!--        <a href="">Series <div style="display: inline-block; transform: rotate(90deg)">&#62;</div></a>-->
+        <details style="margin-bottom: 1rem" {% if page.url == "/" %}open{% endif %}>
+            <summary style="cursor: pointer; user-select: none">Series</summary>
+            <div style="margin: .5rem 0;">
+                {% assign projects = site.projects | sort: 'title' %}
+                {% for project in projects %}
+                <a href="{{ project.url }}"
+                   style="user-select: none; margin: .5rem 0 0 1rem; {% if page.url == project.url %}font-weight: bold;{% endif %}">
+                    {{ project.title }}
+                </a>
+                {% endfor %}
+            </div>
+        </details>
+        {% for html_page in site.html_pages %}
+            {% if html_page.name != '404.html'%}
+                <a href="{{ html_page.url }}" style="user-select: none; {% if page.url == html_page.url %}font-weight: bold;{% endif %}">{{ html_page.title }}</a>
             {% endif %}
         {% endfor %}
     </nav>
