--- a/_sass/partials/layout.scss
+++ b/_sass/partials/layout.scss
@@ -43,12 +43,21 @@ body {
 
 .content {
     p {
+        line-height: 1.5;
         max-width: 1200px;
     }
 
     img {
         max-width: 100%;
         max-height: 80vh;
+    }
+
+    a {
+        color: #333333;
+
+        &:hover {
+            color: black;
+        }
     }
 }
 
