--- a/_sass/partials/navigation.scss
+++ b/_sass/partials/navigation.scss
@@ -31,7 +31,7 @@ nav {
     a {
         color: #000;
         display: block;
-        padding-bottom: 1rem;
+        margin-bottom: 1rem;
         text-decoration: none;
 
         &.active {
@@ -50,7 +50,7 @@ nav {
     a {
         cursor: pointer;
         color: #000;
-        
+
         &:hover {
             color: $light-grey;
         }
