remove netlify widget on page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<!--    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>-->
     <!-- Favicons -->
     {% include favicons.html %}
 
@@ -11,12 +11,11 @@
     <meta name="description" content="{{site.description}}">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/app.css">
+    <link rel="stylesheet" href="/css/app.css">
 
     <!-- Fonts -->
     <link href="/assets/fonts/TSTAR-Bold.css" rel="stylesheet">
     <link href="/assets/fonts/TSTAR-Regular.css" rel="stylesheet">
-    <link href="/assets/fonts/TSTAR-Heavy.css" rel="stylesheet">
-    <link href="/assets/fonts/TSTAR-Italic.css" rel="stylesheet">
-
+<!--    <link href="/assets/fonts/TSTAR-Heavy.css" rel="stylesheet">-->
+<!--    <link href="/assets/fonts/TSTAR-Italic.css" rel="stylesheet">-->
 </head>
