--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
     <a href="/" class="logo">
-        <img src="/img/logo/heinerleiska-logo.svg" class="" alt="Heiner Leiska Logo">
+        <img src="/img/logo/heinerleiska-logo.svg" alt="Heiner Leiska Logo" width="150" height="22">
     </a>
     <nav class="main">
 <!--        <a href="">Series <div style="display: inline-block; transform: rotate(90deg)">&#62;</div></a>-->
